--- a/embedded-solutions.html
+++ b/embedded-solutions.html
@@ -68,8 +68,8 @@
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
-                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
+                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -98,10 +98,10 @@
               <a href="#">Products</a>
               <ul class="nav-dropdown">
                 <li><a href="telecom.html">Telecom</a>
-                  
+
                 </li>
                 <li><a href="defence.html">Defence</a>
-                 
+
                 </li>
                 <li><a href="industrial.html">Industrial</a></li>
 
@@ -596,7 +596,7 @@ gfng
     </div>
   </div>
   <div class="features" id="features">
-    <section class="container" style="padding:30px 0">
+    <section class="container-fluid" style="padding:30px 0">
       <h2 class="page-sub-heading specs-fixed" ><span>Application Software Services</span></h2>
       <div class="line">
       </div>
@@ -604,12 +604,12 @@ gfng
 <div class="container-fluid">
       <div class="row v-tabs " style="margin-top:30px;">
         <div class="col-sm-3 v-tab-head">
-          <a class="v-tab-link active" data-target="#t11" >Web Development</a>
-          <a class="v-tab-link" data-target="#t12" >Tools And Frameworks</a>
+          <a class="v-tab-link  active" data-target="#t11" >Web Development</a>
+          <a class="v-tab-link " data-target="#t12" >Tools And Frameworks</a>
           <a class="v-tab-link" data-target="#t13">Web UI</a>
-          <a class="v-tab-link" data-target="#t14" >Desktop Development</a>
-          <a class="v-tab-link" data-target="#t15" >Database Development</a>
-          <a class="v-tab-link" data-target="#t16">Mobile Development</a>
+          <a class="v-tab-link " data-target="#t14" >Desktop Development</a>
+          <a class="v-tab-link " data-target="#t15" >Database Development</a>
+          <a class="v-tab-link " data-target="#t16">Mobile Development</a>
 
         </div>
         <div class="col-sm-9 v-tab-pane">
@@ -642,7 +642,7 @@ gfng
             </div>
 
           </div>
-          <a class="v-tab-head v-tab-link " data-target="#t12">Tools And Frameworks</a>
+          <a class="v-tab-head v-tab-link" data-target="#t12">Tools And Frameworks</a>
           <div id="t12" class="collapse">
             <div style="margin:25px;">
               <ul class="list-icons">
