--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
-                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
+                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -102,10 +102,10 @@
               <a href="#">Products</a>
               <ul class="nav-dropdown">
                 <li><a href="telecom.html">Telecom</a>
-                  
+
                 </li>
                 <li><a href="defence.html">Defence</a>
-                 
+
                 </li>
                 <li><a href="industrial.html">Industrial</a></li>
 
@@ -167,7 +167,7 @@
           <img src="images/home-slider/3.jpg" width="100%" alt="Services">
           <div class="home-overlay-content">
             <h2 class="home-overlay-text"><span>Services</span></h2>
-            <h5 class="home-overlay-sub-text"><span>Custom solutions| Embedded Solutions </span></h5>
+            <h5 class="home-overlay-sub-text"><span>Custom solutions | Embedded Solutions </span></h5>
             <div class="alignCenter">
 
 
@@ -252,7 +252,7 @@
 
   </div>
   <!-- about our company -->
-  <section class="about-ics-home " style="margin-top:75px;">
+  <section class="about-ics-home " style="margin:75px 0;">
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-xs-12">
@@ -261,21 +261,12 @@
 
         </div> -->
           <div class="about-ics-para">
-            <p class="para">Innovation Communications Systems Ltd. (ICS) is a technology-driven organization in the communication and signal processing domain. </p>
-            <p class="para">We provide end-to-end wireless coverage solutions (Products and Services) specific to customer needs. </p>
-            <p class="para" style="margin-bottom:0.7rem;">ICS has expertise in Design and Development of Communication Systems e.g.
-              Software Defined Radio (SDR)- , High Capacity Radio Relay -
-              IRR-B4(HCRR), Digital Mobile Radio (DMR)- LCR 400, SATCOM modems and
-              various modules like ;</p>
-              <p class="para" style="margin-left:45px;">
-              Transmitters | Receivers | RF & Microwave Products (S to Ka Band) |
-              Embedded/VLSI | Baseband System Design | Networking Systems | Digital Audio
-              | Video and Data Recorders | DVB based Satellite communication designs
-              (DVB-SH, S2 and RCS).</p>
-            <p class="para">Through its continuous R&D efforts, ICS is pushing the boundaries for
-              delivering higher range and throughput with cutting-edge systems for
-              applications across commercial, public  and defence  sectors.
-            </p>
+            <p class="para">Innovation Communications Systems Ltd. (ICS) is a <strong>product development company that supports organisations to bring highly technical products and services to market in the area of </strong>communication and signal processing domain. </p>
+            <p class="para">ICS’s expertise is in Design and Development of Signal processing systems for wide range of frequency bandwidth.3Mhz to 60Ghz for communications and Radars. </p>
+            <p class="para" >Through its continuous R&D efforts, ICS is pushing the boundaries for delivering field deployable end-to-end solutions (Products and Services) specific to customer needs for applications across commercial, public and defence sectors.</p>
+              <p class="para" >
+                Over the years, the company has delivered several systems/sub-systems for Transmitters | Receivers | RF & Microwave Products (S to Ka Band) | Embedded/VLSI | Baseband System Design | Networking Systems | Digital Audio | Video and Data Recorders | Satcom.</p>
+
 
           </div>
 
@@ -377,9 +368,9 @@
 
 
   <!-- <section class="home-about-bg"> -->
-  <section style="padding:90px 0;">
+  <!-- <section style="padding:90px 0;">
 
-    <!-- <h1 class="page-sub-heading" style="margin-bottom:10px;text-align:left;"><span>Our Clients</span></h1> -->
+
     <h2 class="page-sub-heading"><span>Our Clients</span></h2>
     <div class="line">
 
@@ -412,7 +403,7 @@
 
 
     </div>
-  </section>
+  </section> -->
   <!-- </section> -->
   <!-- <div class="block">
     <img src="images/homeabout.jpg" data-speed="-1" class="img-parallax">
