--- a/leadership.html
+++ b/leadership.html
@@ -52,8 +52,8 @@
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
-                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
+                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -82,10 +82,10 @@
               <a href="#">Products</a>
               <ul class="nav-dropdown">
                 <li><a href="telecom.html">Telecom</a>
-                  
+
                 </li>
                 <li><a href="defence.html">Defence</a>
-                 
+
                 </li>
                 <li><a href="industrial.html">Industrial</a></li>
 
@@ -98,13 +98,68 @@
   </header>
 
 
-
-      <p style="color:red">
-        data need to be included
-      </p>
-<div style="height:600px;">
-  
+  <div class="top-img" style="background-image:url('images/home-slider/33.png')">
+    <p class="top-para">
+      Leadership Team
+    </p>
+    <!-- <img src="images/about/1.jpg" class="top-img" /> -->
   </div>
+  <div class="container">
+    <div class="row" style="margin:75px 0;">
+      <div class="col-lg-12 col-md-12">
+        <div class="" style="margin-bottom: 45px;">
+          <h4 style="font-size: 1rem;font-weight: bold;">Rama Rao Sreeramaneni </h4>
+          <h6 style="font-size: 0.9rem;color: grey;">Founder and CEO</h6>
+          <hr style="background-color: #1D58A8;" />
+          <p class="para">
+            After completing his B.Tech. in GITAM and M.S. in Univ. of Missouri, Rama started his career in the Electronics division at Ford Motor Company before returning to India and starting ZSP India (Acquired by LSI Logic) focused on DSP ASICs for cellular market.
+          </p><p class="para">After which he Co-Founded Hellosoft (Acquired by Imagination Technologies, UK) focused on VoIP & Wireless IP and VoWiFi ASICs. Immediately after Hellosoft Rama Founded Uurmi (Acquired by MathWorks) focused on IP for Autonomous cars and Wireless Communications.
+          </p><p class="para">   Rama worked at MathWorks for a brief stint before starting ICS. Rama has over 30 yrs of experience in leading development teams and sales in the field of communications and Image Processing.
+          </p>
+        </div>
+        <div class="" style="margin-bottom: 45px;">
+          <h4 style="font-size: 1rem;font-weight: bold;">	Srinivas Bathini </h4>
+          <h6 style="font-size: 0.9rem;color: grey;">VP Engineering</h6>
+          <hr style="background-color: #1D58A8;" />
+          <p class="para">
+            After completion of B.S and M.E in Osmania Univ., Started career at ITI, India developing telephony switching gear and moved to Singapore to work at ST Electronics.
+          </p><p class="para">From ST he moved to USA to work at Nortel Networks, Telcosoft and Armilliare Tech.in various positions managing large teams and then moved back to India as Director of Eng. at Hellosoft (Acquired by Imagination Technologies).
+              </p><p class="para">After Hellosoft he was VP of Eng. at Uurmi (Acquired by MathWorks) where he worked as  Director of Communication Systems, before starting at ICS. Bathini has more than 30yrs of exp. in Protocol stack, H/w design, System design.
+
+          </p>
+        </div>
+        <div class="" style="margin-bottom: 45px;">
+          <h4 style="font-size: 1rem;font-weight: bold;">		Dr. Yoganandam </h4>
+          <h6 style="font-size: 0.9rem;color: grey;">Sr. Director Technical</h6>
+          <hr style="background-color: #1D58A8;" />
+          <p class="para">
+            After completion of B.& M.S at Osmania Univ., and Ph.D at IIT-Kharaghpur, Dr. Yoganandam has started his career at HAL and moved on to work as Professor and Head of NERTU at Osmania Univ.
+            </p><p class="para"> From OU has joined ZSP(Acquired by LSI Logic) as Director Technical and then moved as Sr. Director Technical at Hellosoft (Acquired by Imagination Technologies).
+              </p><p class="para">Post Hellosoft, he went to work as HOD for Dept. of ECE at BITS (Pilani) Hyderabad Campus before joining ICS. Dr.YY has 39yrs of exp. in Baseband with several publications under his belt.
+
+          </p>
+        </div>
+        <div class="" >
+          <h4 style="font-size: 1rem;font-weight: bold;">	Srinivas Gupta</h4>
+          <h6 style="font-size: 0.9rem;color: grey;">Director RF</h6>
+          <hr style="background-color: #1D58A8;" />
+          <p class="para">
+            After completing B.Tech at NIT Warangal and M Tech at JNTU, Mr. Gupta started his career at HAL and then moved to ECIL as Sr. Manager. Mr. Gupta was founder of Raaga Associates and worked as Sr.VP/COO at Axis Aerospace.
+            </p><p class="para"> Mr. Gupta has been delivering mission critical RF components and sub systems for more than 30yrs.
+              </p><p class="para">Raaga Associates was acquired by ICS and is now part of the ICS management team.
+
+          </p>
+        </div>
+
+
+      </div>
+      <!-- <div class="col-lg-6 col-md-12">
+        <img src="images/home-slider/34.png"  />
+
+      </div> -->
+    </div>
+  </div>
+
 
   <footer>
     <div class="footer">
