--- a/networking.html
+++ b/networking.html
@@ -68,10 +68,10 @@
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
+                <!--<li><a href="clients.html">Clients</a></li> -->
                 <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li>
                 <li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li>
-                <li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -100,10 +100,10 @@
               <a href="#">Products</a>
               <ul class="nav-dropdown">
                 <li><a href="telecom.html">Telecom</a>
-                  
+
                 </li>
                 <li><a href="defence.html">Defence</a>
-                 
+
                 </li>
                 <li><a href="industrial.html">Industrial</a></li>
 
@@ -135,27 +135,27 @@
 
     <div class="">
       <ul class="feature-list marginTop">
-        <li class="feature-each-list">ICS offers broadband wireless Communications products and technologies, offering businesses including Telecom service providers, governments and enterprises effective, economic and secure high-speed wireless Communications solutions</li>
+        <!-- <li class="feature-each-list">ICS offers broadband wireless Communications products and technologies, offering businesses including Telecom service providers, governments and enterprises effective, economic and secure high-speed wireless Communications solutions</li>
         <li class="feature-each-list"> ICS specializes in high-speed Internet access, VoIP, data network extension, and wireless data and telephony backhaul, utilizing its high quality products and industry-leading technologies</li>
         <li class="feature-each-list">We also provide Point-to-Point and Point-to-Multipoint connectivity for various corporates, Government semi and Quasi Government Organizations, including defence sector</li>
         <li class="feature-each-list">We provide complete Wifi Solutions for Business groups like Mining, Defence, Oil Refineries, traffic surveillance and various other security based applications including video and data </li>
         <li class="feature-each-list"> We undertake the projects on turkey basis, including site survey, suggest solution, conduct demonstration of the product / solution, installation and commissioning</li>
         <li class="feature-each-list"> ICS a further supports its clients by supplying the peripheral items like cables (cat 5, cat 5 e, armoured, shielded) as per the site requirement and also the masts of 15 M, 21 M as per site conditions with all connected details including the mast foundation</li>
         <li class="feature-each-list"> ICS is pleased to enter in to a memorandum of understanding with M/s. Vertel Communications Systems Pvt. Ltd., New Delhi for the supply of Licence exempt broadband products such as Breeze Acees, Breeze Net, Breeze Max and etc. M/s. Vertel Communications is the Indian Distributors for the Broadband Products of Alvarion, Israel</li>
-        <li class="feature-each-list"> Now ICS is a System Integrator and provides solutions for video security and surveillance systems, data Communications and last mile connectivity using the Alvarion Broadband Products</li>
-
+        <li class="feature-each-list"> Now ICS is a System Integrator and provides solutions for video security and surveillance systems, data Communications and last mile connectivity using the Alvarion Broadband Products</li> -->
+        <p class="para">ICS is experienced in and has developed Protocols stacks related to the following technologies:</p>
 
       </ul>
     </div>
       </div>
       <div class="features" id="features">
         <section class="container-fluid" style="padding:30px 0">
-          <h2 class="page-sub-heading specs-fixed" ><span>Networking Stacks</span></h2>
+          <!-- <h2 class="page-sub-heading specs-fixed" ><span>Networking Stacks</span></h2>
           <div class="line">
-          </div>
+          </div> -->
 
       <div class="container-fluid">
-          <div class="row v-tabs " style="margin-top:30px;">
+          <div class="row v-tabs " >
             <div class="col-sm-3 v-tab-head">
               <a class="v-tab-link active" style="padding-bottom:400px;" data-target="#t1">Networking Stacks</a>
 
@@ -168,27 +168,27 @@
                   <ul class="list-icons">
                     <li class="list-icon-text">
                       <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
-                      Ethernet Stack Internals – Linux, RTOS, LWIP
+                      DMR – Tier II, Tier III
                     </li>
                     <li class="list-icon-text">
                       <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
-                      Protocol Stacks for WiFi, GSM/GPRS/EDGE, Zigbee, Bluetooth
+                      Protocol Stacks for WiFi – 802.11a/b/g/n/ac/x/p , GSM/GPRS/EDGE/3GPP , Zigbee , Bluetooth
                     </li>
                     <li class="list-icon-text">
                       <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
-                      SIP, RTP/RTCP
+                      V2V
                     </li>
                     <li class="list-icon-text">
                       <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
-                      Experience in enterprise PBX
-                    </li>
-                    <li class="list-icon-text">
-                      <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
-                      IMS Client, Unified Communications, Rich Communication Suite, Integrated Connection Manager
+                      SIP, RTP/RTCP, H.323
                     </li>
                     <li class="list-icon-text">
                       <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
                       Voice Call Continuity and Data session continuity Client over ad-hoc networks – IP-IP networks, IP-PSTN networks
+                    </li>
+                    <li class="list-icon-text">
+                      <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
+                      Point to Point, Point to Multi-Point networks
                     </li>
                     <li class="list-icon-text">
                       <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
@@ -202,6 +202,34 @@
                       <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
                       D136, D137B, D139 for Aerospace needs
                     </li>
+                    <li class="list-icon-text">
+                      <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
+                      TDMA, Dynamic TDMA, FDMA, MANET
+                    </li>
+                    <li class="list-icon-text">
+                      <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
+                      Proprietary protocol stack development
+                    </li>
+                    <li class="list-icon-text">
+                      <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i>
+                      Satcom
+                      <ul class="list-icons" style="margin-left:30px;">
+                        <li class="list-icon-text" style="font-size: 12px;color: #000;border-bottom: 0">
+                          <!-- <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i> -->
+                          Ethernet Stack Internals – Linux, RTOS, LWIP
+                        </li>
+                        <li class="list-icon-text" style="font-size: 12px;color: #000;border-bottom: 0">
+                          <!-- <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i> -->
+                          Experience in enterprise PBX
+                        </li>
+                        <li class="list-icon-text" style="font-size: 12px;color: #000;border-bottom: 0">
+                          <!-- <i class="fa fa-arrow-right list-icon" aria-hidden="true"></i> -->
+                          IMS Client, Unified Communications, Rich Communication Suite, Integrated Connection Manager
+                        </li>
+                      </ul>
+                    </li>
+
+
 
                   </ul>
                 </div>
