--- a/defence.html
+++ b/defence.html
@@ -65,8 +65,8 @@
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
-                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
+                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -95,10 +95,10 @@
               <a href="#">Products</a>
               <ul class="nav-dropdown">
                 <li><a href="telecom.html">Telecom</a>
-                  
+
                 </li>
                 <li><a href="defence.html">Defence</a>
-                 
+
                 </li>
                 <li><a href="industrial.html">Industrial</a></li>
 
@@ -211,7 +211,7 @@
                 </h3>
                 <hr />
                 <p class="para marginTop">
-          Software Defined Radio–(SDR), is ICS’s indigenously designed, developed and manufactured Software Defined Radio(SDR) . It supports Digital waveforms OFDM, Single carrier wideband and DSSS.
+                  ICS Tactical Radio Relay Link (TTR-B3) is a Line-of-Sight (LOS) radio link operating in the Band III (1350 MHz to 2690 MHz) Frequency Band and is intended for use in Tactical Network for long haul transmission of data traffic.
                 </p>
                 <div class="marginTop">
                   <a href="tactical-radio-relay.html" class="product-img-button">READ MORE</a>
