--- a/ipradio.html
+++ b/ipradio.html
@@ -67,8 +67,8 @@
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
-                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
+                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
