--- a/rf-microwave.html
+++ b/rf-microwave.html
@@ -68,8 +68,8 @@ Simulator For RF Module - SDR,S-Band Power Amplifier,Mixer Module – HF,Telemet
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
-                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
+                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
