--- a/telecom.html
+++ b/telecom.html
@@ -65,8 +65,8 @@
               <a href="#">About us</a>
               <ul class="nav-dropdown">
                 <!-- <li><a href="aboutus.html">Our Company</a></li> -->
-                <!-- <li><a href="clients.html">Clients</a></li> -->
-                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><li><a href="clients.html">Clients</a></li>
+                <!--<li><a href="clients.html">Clients</a></li> -->
+                <li><a href="index.html">Home</a></li><li><a href="leadership.html">Leadership Team</a></li><li><a href="qualitystandards-awards.html">Quality Standards & Awards</a></li><!--<li><a href="clients.html">Clients</a></li> -->
 
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -95,10 +95,10 @@
               <a href="#">Products</a>
               <ul class="nav-dropdown">
                 <li><a href="telecom.html">Telecom</a>
-                  
+
                 </li>
                 <li><a href="defence.html">Defence</a>
-                 
+
                 </li>
                 <li><a href="industrial.html">Industrial</a></li>
 
@@ -172,7 +172,7 @@
               </h3>
               <hr />
               <p class="para marginTop">
-                The DMR Trunk– BS mainly works as interface between two communication networks either wired or wireless. This works for trunking feature between different users. 
+                The DMR Trunk– BS mainly works as interface between two communication networks either wired or wireless. This works for trunking feature between different users.
               </p>
               <div class="marginTop">
                 <a href="base-station.html" class="product-img-button">READ MORE</a>
@@ -184,7 +184,7 @@
                 </span>
               </h3>
               <p class="para marginTop">
-                The Repeater mainly works for extension of communication from one DMR Radio to another DMR Radio which are beyond the existing group of network. 
+                The Repeater mainly works for extension of communication from one DMR Radio to another DMR Radio which are beyond the existing group of network.
                             </p>
                             <div class="marginTop">
                               <a href="repeater.html" class="product-img-button">READ MORE</a>
