--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 
         </div> -->
           <div class="about-ics-para">
-            <p class="para">Innovation Communications Systems Ltd. (ICS) is a <strong>product development company that supports organisations to bring highly technical products and services to market in the area of </strong>communication and signal processing domain. </p>
-            <p class="para">ICS’s expertise is in Design and Development of Signal processing systems for wide range of frequency bandwidth.3Mhz to 60Ghz for communications and Radars. </p>
+            <p class="para">Innovation Communications Systems Ltd. (ICS) is a product development company that supports organisations to bring highly technical products and services to market in the area of communication and signal processing domain. </p>
+            <p class="para">ICS’s expertise is in Design and Development of Signal processing systems for wide range of frequency bandwidth 0.3mHz to 60gHz for communications and radars. </p>
             <p class="para" >Through its continuous R&D efforts, ICS is pushing the boundaries for delivering field deployable end-to-end solutions (Products and Services) specific to customer needs for applications across commercial, public and defence sectors.</p>
               <p class="para" >
                 Over the years, the company has delivered several systems/sub-systems for Transmitters | Receivers | RF & Microwave Products (S to Ka Band) | Embedded/VLSI | Baseband System Design | Networking Systems | Digital Audio | Video and Data Recorders | Satcom.</p>
