--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <img src="images/home-slider/3.jpg" width="100%" alt="Services">
           <div class="home-overlay-content">
             <h2 class="home-overlay-text"><span>Services</span></h2>
-            <h5 class="home-overlay-sub-text"><span>Custom solutions | Embedded Solutions </span></h5>
+            <h5 class="home-overlay-sub-text"><span>Custom Solutions | Embedded Solutions </span></h5>
             <div class="alignCenter">
 
 
@@ -260,15 +260,15 @@
           <!-- <div class="line">
 
         </div> -->
-          <div class="about-ics-para">
-            <p class="para">Innovation Communications Systems Ltd. (ICS) is a product development company that supports organisations to bring highly technical products and services to market in the area of communication and signal processing domain. </p>
-            <p class="para">ICS’s expertise is in Design and Development of Signal processing systems for wide range of frequency bandwidth 0.3mHz to 60gHz for communications and radars. </p>
-            <p class="para" >Through its continuous R&D efforts, ICS is pushing the boundaries for delivering field deployable end-to-end solutions (Products and Services) specific to customer needs for applications across commercial, public and defence sectors.</p>
-              <p class="para" >
-                Over the years, the company has delivered several systems/sub-systems for Transmitters | Receivers | RF & Microwave Products (S to Ka Band) | Embedded/VLSI | Baseband System Design | Networking Systems | Digital Audio | Video and Data Recorders | Satcom.</p>
+        <div class="about-ics-para">
+          <p class="para">Innovation Communications Systems Ltd. (ICS) is a product development company that supports organisations to bring highly technical products and services to market in the area of communication and signal processing domain. </p>
+          <p class="para"> ICS’s expertise is in design and development of signal processing systems for wide range of frequency bandwidth 0.3MHz to 60GHz for communications and radars.</p>
+          <p class="para">Through its continuous R&D efforts, ICS is pushing the boundaries for delivering field deployable end-to-end solutions (Products and Services) specific to customer needs for applications across commercial, public and defence sectors. </p>
+          <p class="para">Over the years, the company has delivered several systems/sub-systems for Transmitters | Receivers | RF & Microwave Products (S to Ka Band) | Embedded/VLSI | Baseband System Design | Networking Systems | Digital Audio | Video and Data Recorders | Satcom  </p>
 
 
-          </div>
+
+        </div>
 
 
         </div>
