--- a/leadership.html
+++ b/leadership.html
@@ -73,7 +73,7 @@
               <a href="#">Services</a>
               <ul class="nav-dropdown">
                 <li><a href="custom-solutions.html">Custom solutions(System and Sub Systems Design)</a></li>
-                  <!--   <!-- <li><a href="modems.html">Modem designs</a></li> --> -->
+                  <!--   <li><a href="modems.html">Modem designs</a></li> -->
 
                 <li><a href="embedded-solutions.html">Embedded Solutions(Hardware and Software)</a></li>
               </ul>
@@ -112,9 +112,12 @@
           <h6 style="font-size: 0.9rem;color: grey;">Founder and CEO</h6>
           <hr style="background-color: #1D58A8;" />
           <p class="para">
-            After completing his B.Tech. in GITAM and M.S. in Univ. of Missouri, Rama started his career in the Electronics division at Ford Motor Company before returning to India and starting ZSP India (Acquired by LSI Logic) focused on DSP ASICs for cellular market.
-          </p><p class="para">After which he Co-Founded Hellosoft (Acquired by Imagination Technologies, UK) focused on VoIP & Wireless IP and VoWiFi ASICs. Immediately after Hellosoft Rama Founded Uurmi (Acquired by MathWorks) focused on IP for Autonomous cars and Wireless Communications.
-          </p><p class="para">   Rama worked at MathWorks for a brief stint before starting ICS. Rama has over 30 yrs of experience in leading development teams and sales in the field of communications and Image Processing.
+Rama completed his B.Tech at GITAM and M.S. at Univ. of Missouri. He started his career in the electronics division at Ford Motor Company before returning to India and starting ZSP India (acquired by LSI Logic) which focused on DSP ASICs for cellular market.
+          </p><p class="para">Rama then co-founded Hellosoft (acquired by Imagination Technologies, UK) which focused on VoIP & Wireless IP and VoWiFi ASICs.
+          </p><p class="para"> Post Hellosoft, Rama founded Uurmi (acquired by MathWorks) which focused on IP for autonomous cars and wireless communications. Rama worked at MathWorks for a brief stint before starting ICS.
+          </p>
+          <p class="para">
+            Rama has over 30 yrs. of experience in leading development teams and sales in the field of communications and image processing.
           </p>
         </div>
         <div class="" style="margin-bottom: 45px;">
@@ -122,32 +125,42 @@
           <h6 style="font-size: 0.9rem;color: grey;">VP Engineering</h6>
           <hr style="background-color: #1D58A8;" />
           <p class="para">
-            After completion of B.S and M.E in Osmania Univ., Started career at ITI, India developing telephony switching gear and moved to Singapore to work at ST Electronics.
-          </p><p class="para">From ST he moved to USA to work at Nortel Networks, Telcosoft and Armilliare Tech.in various positions managing large teams and then moved back to India as Director of Eng. at Hellosoft (Acquired by Imagination Technologies).
-              </p><p class="para">After Hellosoft he was VP of Eng. at Uurmi (Acquired by MathWorks) where he worked as  Director of Communication Systems, before starting at ICS. Bathini has more than 30yrs of exp. in Protocol stack, H/w design, System design.
-
-          </p>
+          Bathini completed his B.S and M.E at Osmania University. He started his career at ITI, India developing telephony switching gear and moved to Singapore to work at ST Electronics.
+        </p><p class="para">From ST Electronics, he moved to USA to work at Nortel Networks, Telcosoft Ltd. and Armilliare Technologies in various positions managing large teams and then moved back to India as Director of engineering at Hellosoft (Acquired by Imagination Technologies, UK) .
+              </p>
+              <p class="para">Post Hellosoft, he was VP of engineering at Uurmi (acquired by MathWorks) where he worked as Director of communication systems, before starting at ICS.
+                  </p>
+                  <p class="para">Bathini has more than 30 yrs. of experience in Protocol stack, H/W design, and system design.
+                      </p>
         </div>
         <div class="" style="margin-bottom: 45px;">
           <h4 style="font-size: 1rem;font-weight: bold;">		Dr. Yoganandam </h4>
           <h6 style="font-size: 0.9rem;color: grey;">Sr. Director Technical</h6>
           <hr style="background-color: #1D58A8;" />
           <p class="para">
-            After completion of B.& M.S at Osmania Univ., and Ph.D at IIT-Kharaghpur, Dr. Yoganandam has started his career at HAL and moved on to work as Professor and Head of NERTU at Osmania Univ.
-            </p><p class="para"> From OU has joined ZSP(Acquired by LSI Logic) as Director Technical and then moved as Sr. Director Technical at Hellosoft (Acquired by Imagination Technologies).
-              </p><p class="para">Post Hellosoft, he went to work as HOD for Dept. of ECE at BITS (Pilani) Hyderabad Campus before joining ICS. Dr.YY has 39yrs of exp. in Baseband with several publications under his belt.
+    Dr. YY has completed his B. & M.S at Osmania University and Ph.D at IIT-Kharaghpur.  He started his career at HAL and moved on to work as Professor and Head of NERTU at Osmania University (OU) .
+            </p>
+            <p class="para">From OU he joined ZSP (Acquired by LSI Logic) as Director Technical and then moved as Sr. Director Technical at Hellosoft (Acquired by Imagination Technologies, UK).
 
-          </p>
+              </p>  <p class="para">
+          Post Hellosoft, he went to work as HOD of ECE department at BITS Pilani, Hyderabad before joining ICS.
+                  </p>  <p class="para">
+              Dr.YY has 39 yrs. of experience in Baseband with several publications under his belt.
+                      </p>
         </div>
         <div class="" >
           <h4 style="font-size: 1rem;font-weight: bold;">	Srinivas Gupta</h4>
           <h6 style="font-size: 0.9rem;color: grey;">Director RF</h6>
           <hr style="background-color: #1D58A8;" />
-          <p class="para">
-            After completing B.Tech at NIT Warangal and M Tech at JNTU, Mr. Gupta started his career at HAL and then moved to ECIL as Sr. Manager. Mr. Gupta was founder of Raaga Associates and worked as Sr.VP/COO at Axis Aerospace.
-            </p><p class="para"> Mr. Gupta has been delivering mission critical RF components and sub systems for more than 30yrs.
-              </p><p class="para">Raaga Associates was acquired by ICS and is now part of the ICS management team.
 
+          <p class="para">
+Mr. Gupta completed his B.Tech at NIT Warangal and M Tech at JNTU. He started his career at HAL and then moved to ECIL as Sr. Manager.
+          </p>
+          <p class="para">
+Mr. Gupta was founder of Raaga Associates and worked as Sr.VP/COO at Axis Aerospace. Raaga Associates was acquired by ICS and is now part of the ICS management team.
+          </p>
+          <p class="para">
+He has more than 30 years of experience and has been delivering mission critical RF components and sub systems .
           </p>
         </div>
 
